@@ -1,3 +1,7 @@
+2007-11-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c: Don't release taper_ev_read in
+                               start_degraded_mode.
+
 2007-11-20  Paddy Sreenivasan <paddy@zmanda.com>
         * amanda.spec: Added calls to Zmanda
 	* example/amanda-client.conf.in: Switch to bsdtcp
